refactor(http-benchmarks): move http-benchmarks package location

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,4 +5,4 @@ packages:
   - "packages/docs/tools/*"
   - "packages/foundation/libraries/*"
   - "packages/foundation/tools/*"
-  - "packages/http/libraries/*"
+  - "packages/http/tools/*"
