--- a/packages/http/tools/http-benchmarks/package.json
+++ b/packages/http/tools/http-benchmarks/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Roberto Pintos López",
+  "author": "Adrián Martínez Jiménez",
   "bugs": {
     "url": "https://github.com/inversify/monorepo/issues"
   },
