chore(eslint): add eslint working directory to vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     { "pattern": "./packages/docs/services/*" },
     { "pattern": "./packages/docs/tools/*" },
     { "pattern": "./packages/foundation/libraries/*" },
-    { "pattern": "./packages/foundation/tools/*" }
+    { "pattern": "./packages/foundation/tools/*" },
+    { "pattern": "./packages/http/tools/*" }
   ]
 }
