--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     { "pattern": "./packages/docs/services/*" },
     { "pattern": "./packages/docs/tools/*" },
     { "pattern": "./packages/foundation/libraries/*" },
-    { "pattern": "./packages/foundation/tools/*" }
+    { "pattern": "./packages/foundation/tools/*" },
+    { "pattern": "./packages/http/libraries/*" },
+    { "pattern": "./packages/http/tools/*" }
   ]
 }
