--- a/packages/container/libraries/binding-decorators/package.json
+++ b/packages/container/libraries/binding-decorators/package.json
@@ -25,7 +25,7 @@
     "typescript": "5.8.2"
   },
   "peerDependencies": {
-    "inversify": "^7.0.0-alpha.5"
+    "inversify": "^7.0.1"
   },
   "homepage": "https://inversify.io",
   "keywords": [
