--- a/packages/http/libraries/core/package.json
+++ b/packages/http/libraries/core/package.json
@@ -49,7 +49,7 @@
   },
   "name": "@inversifyjs/http-core",
   "peerDependencies": {
-    "inversify": "7.0.0-alpha.5"
+    "inversify": "^7.0.1"
   },
   "publishConfig": {
     "access": "public"
