--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,5 @@
+# Refer to https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
+# for more information
+
 * @notaphplover
-packages/http/ @Adrianmjim
+packages/http/ @Adrianmjim @notaphplover
