--- a/packages/foundation/tools/eslint-config/package.json
+++ b/packages/foundation/tools/eslint-config/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-vitest": "0.5.4",
     "prettier": "3.5.2",
     "typescript-eslint": "8.25.0"
   },
