--- a/packages/container/libraries/common/package.json
+++ b/packages/container/libraries/common/package.json
@@ -18,7 +18,8 @@
     "ts-loader": "9.5.2",
     "ts-jest": "29.2.6",
     "tslib": "2.8.1",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vitest": "3.0.5"
   },
   "devEngines": {
     "node": "^22.10.2",
@@ -60,13 +61,13 @@
     "format": "prettier --write ./src/**/*.ts",
     "lint": "eslint ./src",
     "prebuild": "pnpm run build:clean",
-    "test": "jest --config=jest.config.mjs --runInBand",
-    "test:integration:js": "pnpm run test:js --selectProjects Integration",
-    "test:js": "jest --config=jest.js.config.mjs --runInBand",
+    "test": "vitest run",
+    "test:integration:js": "pnpm run test:js --project Integration",
+    "test:js": "pnpm run test --workspace vitest.js.workspace.mjs",
     "test:js:coverage": "pnpm run test:unit:js --coverage",
     "test:mutation": "stryker run",
-    "test:uncommitted": "pnpm run test --changedSince=HEAD",
-    "test:unit:js": "pnpm run test:js --selectProjects Unit"
+    "test:uncommitted": "pnpm run test --changed=HEAD",
+    "test:unit:js": "pnpm run test:js --project Unit"
   },
   "version": "1.5.0"
 }
