--- a/packages/docs/tools/binding-decorators-code-examples/package.json
+++ b/packages/docs/tools/binding-decorators-code-examples/package.json
@@ -51,7 +51,7 @@
     "build": "pnpm run build:cjs && pnpm run generate:examples",
     "build:cjs": "tsc --build tsconfig.cjs.json && pnpm exec foundation-ts-package-cjs ./lib/cjs",
     "build:clean": "rimraf generated lib",
-    "format": "prettier --write ./src/**/*.ts",
+    "format": "prettier --write ./src",
     "generate:examples": "node ./lib/cjs/scripts/generateExamples/index.mjs",
     "lint": "eslint ./src",
     "prebuild": "pnpm run build:clean",
