--- a/packages/foundation/tools/jest-config/package.json
+++ b/packages/foundation/tools/jest-config/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/inversify/monorepo.git"
   },
   "scripts": {
-    "format": "prettier --write ./lib/**/*.js"
+    "format": "prettier --write ./lib"
   },
   "type": "module"
 }
