--- a/packages/docs/services/inversify-binding-decorators-site/package.json
+++ b/packages/docs/services/inversify-binding-decorators-site/package.json
@@ -57,7 +57,7 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start --port 3001",
     "build": "pnpm run typecheck && docusaurus build",
-    "format": "prettier --write ./src/**/*.{ts,tsx} ./*.ts",
+    "format": "prettier --write ./src ./*.ts",
     "lint": "eslint ./src ./docusaurus.config.ts ./sidebars.ts",
     "serve": "docusaurus serve --port 3001",
     "typecheck": "tsc"
