--- a/turbo.json
+++ b/turbo.json
@@ -46,6 +46,14 @@
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": ["src/**/*.{cts,mts,ts}"]
     },
+    "@inversifyjs/foundation-jest-config#format": {
+      "inputs": ["lib/**/*.{cjs,mjs,js}"],
+      "outputs": ["lib/**/*.{cjs,mjs,js}"]
+    },
+    "@inversifyjs/foundation-rollup-config#format": {
+      "inputs": ["lib/**/*.{cjs,mjs,js}"],
+      "outputs": ["lib/**/*.{cjs,mjs,js}"]
+    },
     "lint": {
       "dependsOn": ["^build"],
       "inputs": ["src/**/*.{cts,mts,ts}"]
