--- a/packages/foundation/tools/vitest-config/package.json
+++ b/packages/foundation/tools/vitest-config/package.json
@@ -4,9 +4,13 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "Common vitest config for inversify monorepo packages",
+  "dependencies": {
+    "@swc/core": "^1.11.5",
+    "unplugin-swc": "^1.5.1",
+    "vitest": "^3.0.5"
+  },
   "devDependencies": {
-    "prettier": "3.5.3",
-    "vitest": "3.0.5"
+    "prettier": "3.5.3"
   },
   "exports": "./lib/index.js",
   "homepage": "https://github.com/inversify/monorepo#readme",
