--- a/packages/container/libraries/core/package.json
+++ b/packages/container/libraries/core/package.json
@@ -14,6 +14,7 @@
     "@stryker-mutator/vitest-runner": "8.7.1",
     "@stryker-mutator/typescript-checker": "8.7.1",
     "@types/node": "22.13.8",
+    "@vitest/coverage-v8": "3.0.7",
     "eslint": "9.21.0",
     "prettier": "3.5.3",
     "reflect-metadata": "0.2.2",
