--- a/packages/container/libraries/strongly-typed/package.json
+++ b/packages/container/libraries/strongly-typed/package.json
@@ -6,6 +6,7 @@
   "description": "InversifyJs strong type definitions",
   "devDependencies": {
     "@types/node": "22.13.8",
+    "@vitest/coverage-v8": "3.0.7",
     "eslint": "9.21.0",
     "prettier": "3.5.3",
     "reflect-metadata": "0.2.2",
