--- a/packages/docs/tools/inversify-code-examples/package.json
+++ b/packages/docs/tools/inversify-code-examples/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@inversifyjs/code-examples-devkit": "workspace:*",
     "@types/node": "22.13.8",
+    "@vitest/coverage-v8": "3.0.7",
     "eslint": "9.21.0",
     "glob": "11.0.1",
     "prettier": "3.5.3",
