--- a/packages/foundation/libraries/prototype-utils/package.json
+++ b/packages/foundation/libraries/prototype-utils/package.json
@@ -34,6 +34,7 @@
     "@stryker-mutator/vitest-runner": "8.7.1",
     "@stryker-mutator/typescript-checker": "8.7.1",
     "@types/node": "22.13.8",
+    "@vitest/coverage-v8": "3.0.7",
     "eslint": "9.21.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
