chore(test): refactor test commands from root package

--- a/package.json
+++ b/package.json
@@ -43,13 +43,12 @@
     "prepare": "husky && turbo telemetry disable",
     "prerelease": "pnpm run build",
     "release": "changeset publish",
-    "test:integration:js": "turbo test:integration:js",
-    "test:js": "turbo run test:js",
-    "test:js:coverage": "turbo run test:js:coverage",
+    "test:integration": "turbo test:integration",
+    "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage",
     "test:mutation": "turbo run test:mutation --concurrency=25%",
     "test:uncommitted": "turbo run test:uncommitted --filter [HEAD]",
-    "test:unit:js": "turbo run test:unit:js",
-    "test": "turbo run test",
+    "test:unit": "turbo run test:unit",
     "test:e2e": "turbo run test:e2e",
     "test:e2e:cjs": "turbo run test:e2e:cjs",
     "test:e2e:esm": "turbo run test:e2e:esm",
