chore: remove benchmark packages from root dependencies

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,7 +60,7 @@ jobs:
         run: |
               EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
               echo "result<<$EOF" >> $GITHUB_OUTPUT
-              echo "$(pnpm exec container-benchmarks-run-cjs)" >> $GITHUB_OUTPUT
+              echo "$(pnpm run benchmarks:container:cjs)" >> $GITHUB_OUTPUT
               echo "$EOF" >> $GITHUB_OUTPUT
 
       - name: Run benchmarks (ESM)
@@ -68,7 +68,7 @@ jobs:
         run: |
               EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
               echo "result<<$EOF" >> $GITHUB_OUTPUT
-              echo "$(pnpm exec container-benchmarks-run-esm)" >> $GITHUB_OUTPUT
+              echo "$(pnpm run benchmarks:container:esm)" >> $GITHUB_OUTPUT
               echo "$EOF" >> $GITHUB_OUTPUT
 
       - uses: actions/github-script@v7
