chore: update test:uncommitted task with right dependency

--- a/turbo.json
+++ b/turbo.json
@@ -90,6 +90,7 @@
       "outputs": ["reports/**"]
     },
     "test:uncommitted": {
+      "dependsOn": ["^build"],
       "inputs": ["src/**/*.{cts,mts,ts}"],
       "outputs": []
     },
