feat(http-express): remove unused deps

--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -5,8 +5,7 @@
   },
   "description": "InversifyJs http express package",
   "dependencies": {
-    "@inversifyjs/http-core": "workspace:*",
-    "@inversifyjs/reflect-metadata-utils": "workspace:*"
+    "@inversifyjs/http-core": "workspace:*"
   },
   "devDependencies": {
     "@stryker-mutator/core": "8.7.1",
