--- a/packages/http/tools/http-benchmarks/package.json
+++ b/packages/http/tools/http-benchmarks/package.json
@@ -6,12 +6,15 @@
   "description": "InversifyJs benchmarks package",
   "dependencies": {
     "@inversifyjs/benchmark-utils": "workspace:*",
+    "@inversifyjs/http-core": "workspace:*",
+    "@inversifyjs/http-fastify": "workspace:*",
     "@nestjs/common": "11.0.11",
     "@nestjs/core": "11.0.11",
     "@nestjs/platform-express": "11.0.11",
     "@nestjs/platform-fastify": "11.0.11",
     "express": "4.21.2",
     "fastify": "5.2.1",
+    "inversify": "7.1.0",
     "rxjs": "7.8.2",
     "tinybench": "3.1.1"
   },
