--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,6 +8,12 @@ on:
       npm-token:
         description: npm token to be used to publish npm packages
         required: false
+      remove-changesets:
+        default: false
+        description: Remove changesets to force a release
+        required: false
+        type: boolean
+
 jobs:
   publish:
     name: Bump package versions and publish to npm.
@@ -26,6 +32,10 @@ jobs:
         with:
           app-id: ${{ vars.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+
+      - name: Remove changesets if needed to force a release
+        if: ${{ inputs.remove-changesets == true }}
+        run: rm -f .changeset/*.md
 
       - name: Create Release Pull or publish changes
         uses: changesets/action@v1
