--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -52,9 +52,7 @@
     "express": "^4.21.2",
     "inversify": "^7.1.0"
   },
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/inversify/monorepo.git"
