--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,6 +9,7 @@
   "updateInternalDependencies": "patch",
   "ignore": [
     "@inversifyjs/http-core",
+    "@inversifyjs/http-express",
     "@inversifyjs/logger"
   ]
 }
