--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -4,9 +4,6 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "InversifyJs http express package",
-  "dependencies": {
-    "@inversifyjs/http-core": "workspace:*"
-  },
   "devDependencies": {
     "@stryker-mutator/core": "8.7.1",
     "@stryker-mutator/vitest-runner": "8.7.1",
@@ -49,6 +46,7 @@
   },
   "name": "@inversifyjs/http-express",
   "peerDependencies": {
+    "@inversifyjs/http-core": "workspace:*",
     "express": "^4.21.2",
     "inversify": "^7.1.0"
   },
