--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -5,6 +5,7 @@
   },
   "description": "InversifyJs http express package",
   "devDependencies": {
+    "@inversifyjs/http-core": "workspace:*",
     "@stryker-mutator/core": "8.7.1",
     "@stryker-mutator/vitest-runner": "8.7.1",
     "@stryker-mutator/typescript-checker": "8.7.1",
