--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -4,6 +4,9 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "InversifyJs http express package",
+  "dependencies": {
+    "@inversifyjs/http-core": "workspace:*"
+  },
   "devDependencies": {
     "@stryker-mutator/core": "8.7.1",
     "@stryker-mutator/vitest-runner": "8.7.1",
@@ -46,7 +49,6 @@
   },
   "name": "@inversifyjs/http-express",
   "peerDependencies": {
-    "@inversifyjs/http-core": "workspace:*",
     "express": "^4.21.2",
     "inversify": "^7.1.0"
   },
