--- a/packages/http/libraries/hono/package.json
+++ b/packages/http/libraries/hono/package.json
@@ -9,8 +9,8 @@
   },
   "devDependencies": {
     "@stryker-mutator/core": "8.7.1",
-    "@stryker-mutator/vitest-runner": "8.7.1",
     "@stryker-mutator/typescript-checker": "8.7.1",
+    "@stryker-mutator/vitest-runner": "8.7.1",
     "@types/node": "22.13.4",
     "@vitest/coverage-v8": "3.0.7",
     "eslint": "9.20.1",
@@ -48,8 +48,8 @@
   },
   "name": "@inversifyjs/http-hono",
   "peerDependencies": {
-    "inversify": "7.1.0",
-    "hono": "^4.7.2"
+    "hono": "^4.7.2",
+    "inversify": "7.1.0"
   },
   "publishConfig": {
     "access": "public"
@@ -63,7 +63,7 @@
     "build:cjs": "tsc --build tsconfig.cjs.json && pnpm exec foundation-ts-package-cjs ./lib/cjs",
     "build:esm": "rollup -c ./rollup.config.mjs && pnpm exec foundation-ts-package-esm ./lib/esm",
     "build:clean": "rimraf lib",
-    "format": "prettier --write ./src/**/*.ts",
+    "format": "prettier --write ./src",
     "lint": "eslint ./src",
     "prebuild": "pnpm run build:clean",
     "test": "vitest run",
