--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,7 @@
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": [
+    "@inversifyjs/http-benchmarks",
     "@inversifyjs/http-core",
     "@inversifyjs/http-express",
     "@inversifyjs/logger"
