--- a/packages/http/tools/http-benchmarks/package.json
+++ b/packages/http/tools/http-benchmarks/package.json
@@ -15,11 +15,11 @@
     "express": "4.21.2",
     "fastify": "5.2.1",
     "inversify": "7.2.0",
-    "rxjs": "7.8.2",
-    "tinybench": "4.0.1"
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/k6": "^1.0.1",
     "@types/node": "^22.13.13",
     "eslint": "9.23.0",
     "prettier": "3.5.3",
