--- a/packages/http/libraries/hono/package.json
+++ b/packages/http/libraries/hono/package.json
@@ -48,8 +48,8 @@
   },
   "name": "@inversifyjs/http-hono",
   "peerDependencies": {
-    "hono": "^4.7.2",
-    "inversify": "7.1.0"
+    "hono": "^4.7.5",
+    "inversify": "^7.2.0"
   },
   "publishConfig": {
     "access": "public"
