refactor(ci): refactor build pipeline to run http e2e tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -112,8 +112,8 @@ jobs:
       - name: Launch Integration Tests
         run: pnpm run test:integration --filter ${{ join(matrix.packages, ' --filter ') }}
 
-  test-e2e:
-    name: Run E2E tests.
+  test-e2e-container:
+    name: Run container E2E tests.
     needs: build
     runs-on: ubuntu-latest
     if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container') }}
@@ -127,15 +127,36 @@ jobs:
       - uses: ./.github/actions/setup
 
       - name: Run e2e tests (CJS)
-        run: pnpm run test:e2e:cjs
+        run: pnpm run test:e2e:cjs --filter='@inversifyjs/container-e2e-tests'
 
       - name: Run e2e tests (ESM)
-        run: pnpm run test:e2e:esm
+        run: pnpm run test:e2e:esm --filter='@inversifyjs/container-e2e-tests'
+
+  test-e2e-http:
+    name: Run http E2E tests.
+    needs: build
+    runs-on: ubuntu-latest
+    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') || contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') }}
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/setup
+
+      - name: Run e2e tests (CJS)
+        run: pnpm run test:e2e:cjs --filter='@inversifyjs/http-e2e-tests'
+
+      - name: Run e2e tests (ESM)
+        run: pnpm run test:e2e:esm --filter='@inversifyjs/http-e2e-tests'
 
   done:
     name: Done
     needs:
-      - test-e2e
+      - test-e2e-container
+      - test-e2e-http
       - test-package
     runs-on: ubuntu-latest
     steps:
