--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -89,6 +89,68 @@ jobs:
             \`\`\``
             })
 
+  run-http-benchmarks:
+    name: Run benchmarks
+    environment: CI
+    needs: build
+    runs-on: ubuntu-latest
+    if: >-
+      (
+        (
+          ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core')}} ||
+          ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express')}}
+        )
+        &&
+        github.event.pull_request.head.repo.fork != true
+      )
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/setup
+
+      - name: Setup K6
+        uses: grafana/setup-k6-action@v1
+
+      - name: Compile source files
+        run: pnpm run build
+
+      - name: Run benchmarks (CommonJS)
+        id: run-cjs-benchmarks
+        run: |
+              EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+              echo "result<<$EOF" >> $GITHUB_OUTPUT
+              echo "$(pnpm run benchmarks:http:cjs)" >> $GITHUB_OUTPUT
+              echo "$EOF" >> $GITHUB_OUTPUT
+
+      - name: Run benchmarks (ESM)
+        id: run-esm-benchmarks
+        run: |
+              EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+              echo "result<<$EOF" >> $GITHUB_OUTPUT
+              echo "$(pnpm run benchmarks:http:esm)" >> $GITHUB_OUTPUT
+              echo "$EOF" >> $GITHUB_OUTPUT
+
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Benchmarks results:
+            ---
+            \`\`\`bash
+            ${{steps.run-cjs-benchmarks.outputs.result}}
+            \`\`\`
+            \`\`\`bash
+            ${{steps.run-esm-benchmarks.outputs.result}}
+            \`\`\``
+            })
+
   test-package:
     name: Test package
     needs: build
