chore(fastify): change package to private and remove publishConfig

--- a/packages/http/libraries/fastify/package.json
+++ b/packages/http/libraries/fastify/package.json
@@ -51,9 +51,7 @@
     "fastify": "^5.2.1",
     "inversify": "^7.1.0"
   },
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/inversify/monorepo.git"
