feat(http-fastify): add cookie handling in InversifyFastifyHttpAdapter

--- a/packages/http/libraries/fastify/package.json
+++ b/packages/http/libraries/fastify/package.json
@@ -5,6 +5,7 @@
   },
   "description": "InversifyJs http fastify package",
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@inversifyjs/http-core": "workspace:*"
   },
   "devDependencies": {
