--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -188,7 +188,12 @@ jobs:
     name: Run http E2E tests.
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') || contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') }}
+    if: >-
+      (
+        ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core')}} ||
+        ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express')}} ||
+        ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-hono')}}
+      )
     steps:
 
       - name: Checkout
