chore: fix workflow to avoid runing benchmarks on forks

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -100,8 +100,7 @@ jobs:
           ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core')}} ||
           ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express')}}
         )
-        &&
-        github.event.pull_request.head.repo.fork != true
+        && github.event.pull_request.head.repo.fork != true
       )
     steps:
       - name: Checkout
