--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,7 +94,7 @@ jobs:
     environment: CI
     needs: build
     runs-on: ubuntu-latest
-    if: ( ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core')}} || ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express')}} ) && github.event.pull_request.head.repo.fork != true
+    if: ${{ ( contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') || contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') ) && github.event.pull_request.head.repo.fork != true }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
