--- a/packages/http/libraries/express/package.json
+++ b/packages/http/libraries/express/package.json
@@ -49,7 +49,7 @@
   },
   "name": "@inversifyjs/http-express",
   "peerDependencies": {
-    "express": "^5.1.0 || ^4.21.2",
+    "express": "^5.1.0",
     "inversify": "^7.5.0"
   },
   "private": true,
