chore(http-benchmarks): add express4 and its types to package.json

--- a/packages/http/tools/http-benchmarks/package.json
+++ b/packages/http/tools/http-benchmarks/package.json
@@ -9,12 +9,14 @@
     "@inversifyjs/benchmark-utils": "workspace:*",
     "@inversifyjs/http-core": "workspace:*",
     "@inversifyjs/http-express": "workspace:*",
+    "@inversifyjs/http-express4": "workspace:*",
     "@inversifyjs/http-hono": "workspace:*",
     "@nestjs/common": "11.0.13",
     "@nestjs/core": "11.0.13",
     "@nestjs/platform-express": "11.0.13",
     "@nestjs/platform-fastify": "11.0.13",
     "express": "5.1.0",
+    "express4": "npm:express@4.21.1",
     "fastify": "5.2.2",
     "hono": "4.7.5",
     "inversify": "7.5.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/express4": "npm:@types/express@4.17.21",
     "@types/k6": "^1.0.2",
     "@types/node": "^22.14.0",
     "eslint": "9.23.0",
