fix(ci): fix http bench and http e2e test job conditions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,7 +94,16 @@ jobs:
     environment: CI
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ ( contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') || contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') || contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-hono') ) && github.event.pull_request.head.repo.fork != true }}
+    if: >-
+      ${{ 
+        ( 
+          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') ||
+          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') ||
+          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express-v4') ||
+          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-hono') ||
+          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-benchmarks')
+        ) && github.event.pull_request.head.repo.fork != true
+      }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -159,7 +168,14 @@ jobs:
     name: Run container E2E tests.
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container') }}
+    if: >-
+      ${{
+        contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') ||
+        contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') ||
+        contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express-v4') ||
+        contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-hono') ||
+        contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-e2e-tests')
+      }}
     steps:
 
       - name: Checkout
