--- a/packages/container/tools/container-benchmarks/package.json
+++ b/packages/container/tools/container-benchmarks/package.json
@@ -11,6 +11,7 @@
     "@nestjs/common": "11.0.16",
     "@nestjs/core": "11.0.16",
     "inversify6": "npm:inversify@6.2.2",
+    "inversify7": "npm:inversify@7.5.0",
     "rxjs": "7.8.2",
     "tinybench": "4.0.1",
     "tsyringe": "4.9.1"
