chore: ignore fastify package

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -13,6 +13,7 @@
     "@inversifyjs/http-e2e-tests",
     "@inversifyjs/http-express",
     "@inversifyjs/http-express-v4",
+    "@inversifyjs/http-fastify",
     "@inversifyjs/http-hono",
     "@inversifyjs/logger"
   ]
