feat(plugin): simplify plugin package

--- a/packages/container/libraries/plugin/package.json
+++ b/packages/container/libraries/plugin/package.json
@@ -5,7 +5,9 @@
   },
   "description": "InversifyJs plugin package",
   "dependencies": {
-    "@inversifyjs/container": "workspace:*"
+    "@inversifyjs/common": "workspace:*",
+    "@inversifyjs/container": "workspace:*",
+    "@inversifyjs/core": "workspace:*"
   },
   "devDependencies": {
     "@stryker-mutator/core": "8.7.1",
@@ -15,7 +17,6 @@
     "@vitest/coverage-v8": "3.1.1",
     "eslint": "9.24.0",
     "prettier": "3.5.3",
-    "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
     "rollup": "4.40.0",
     "ts-loader": "9.5.2",
