chore: update workspace with container examples packages folder

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 packages:
+  - packages/container/examples/*
   - packages/container/libraries/*
   - packages/container/tools/*
   - packages/docs/services/*
