--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "eslint.workingDirectories": [
+    { "pattern": "./packages/container/examples/*" },
     { "pattern": "./packages/container/libraries/*" },
     { "pattern": "./packages/container/tools/*" },
     { "pattern": "./packages/docs/services/*" },
