--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,7 @@ jobs:
     environment: CI
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container') && github.event.pull_request.head.repo.fork != true }}
+    if: ${{ contains(needs.build.outputs.affectedPackages, '@inversifyjs/container-benchmarks') && github.event.pull_request.head.repo.fork != true }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -97,10 +97,6 @@ jobs:
     if: >-
       ${{ 
         ( 
-          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-core') ||
-          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express') ||
-          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-express-v4') ||
-          contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-hono') ||
           contains(needs.build.outputs.affectedPackages, '@inversifyjs/http-benchmarks')
         ) && github.event.pull_request.head.repo.fork != true
       }}
