feat(plugin): update Plugin with TContainer generic

--- a/packages/container/libraries/container/package.json
+++ b/packages/container/libraries/container/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@inversifyjs/common": "workspace:*",
     "@inversifyjs/core": "workspace:*",
+    "@inversifyjs/plugin": "workspace:*",
     "@inversifyjs/reflect-metadata-utils": "workspace:*"
   },
   "devDependencies": {
