--- a/packages/container/libraries/plugin/package.json
+++ b/packages/container/libraries/plugin/package.json
@@ -4,11 +4,8 @@
     "url": "https://github.com/inversify/monorepo/issues"
   },
   "description": "InversifyJs plugin package",
-  "dependencies": {
-    "@inversifyjs/container": "workspace:*",
-    "@inversifyjs/core": "workspace:*"
-  },
   "devDependencies": {
+    "@inversifyjs/core": "workspace:*",
     "@stryker-mutator/core": "8.7.1",
     "@stryker-mutator/vitest-runner": "8.7.1",
     "@stryker-mutator/typescript-checker": "8.7.1",
