chore: add missing e2e task dependency

--- a/turbo.json
+++ b/turbo.json
@@ -64,7 +64,8 @@
       "outputs": []
     },
     "test:e2e": {
-      "cache": false
+      "cache": false,
+      "dependsOn": ["^build"]
     },
     "test:e2e:cjs": {
       "cache": false,
