--- a/packages/container/libraries/plugin-dispose/package.json
+++ b/packages/container/libraries/plugin-dispose/package.json
@@ -5,9 +5,11 @@
   },
   "description": "InversifyJs dispose plugin package",
   "dependencies": {
+    "@inversifyjs/container": "workspace:*",
     "@inversifyjs/plugin": "workspace:*"
   },
   "devDependencies": {
+    "@inversifyjs/common": "workspace:*",
     "@inversifyjs/core": "workspace:*",
     "@stryker-mutator/core": "8.7.1",
     "@stryker-mutator/vitest-runner": "8.7.1",
